--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 ---
 name: 'Release Formatting'
-on: [ push ]
+on:
+  push:
+    tags:
+      - '*'
 
 jobs:
   package:
@@ -9,12 +12,24 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build source artifact
         run: |
-          mkdir -p ../rocky-logos-83.0 &&
-          cp -r . ../rocky-logos-83.0 &&
-          mv ../rocky-logos-83.0 . &&
-          tar cfj rocky-logos-83.0.tar.xz rocky-logos-83.0
+          mkdir -p ../rocky-logos-${GITHUB_REF##*/} &&
+          cp -r . ../rocky-logos-${GITHUB_REF##*/} &&
+          mv ../rocky-logos-${GITHUB_REF##*/} . &&
+          tar cfj rocky-logos-${GITHUB_REF##*/}.tar.xz rocky-logos-${GITHUB_REF##*/}
       - name: Publish artifact
         uses: actions/upload-artifact@v2.2.3
         with:
-          name: rocky-logos-83.0.tar.xz
-          path: rocky-logos-83.0.tar.xz
+          name: rocky-logos-${GITHUB_REF##*/}.tar.xz
+          path: rocky-logos-${GITHUB_REF##*/}.tar.xz
+      - name: Generate release
+        uses: docker://antonyurchenko/git-release:latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DRAFT_RELEASE: "false"
+          PRE_RELEASE: "false"
+          CHANGELOG_FILE: "none"
+          ALLOW_EMPTY_CHANGELOG: "false"
+          ALLOW_TAG_PREFIX: "true"
+        with:
+          args: |
+              rocky-logos-${GITHUB_REF##*/}.tar.xz
