--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           PRE_RELEASE: "false"
           CHANGELOG_FILE: "none"
           ALLOW_EMPTY_CHANGELOG: "false"
-          TAG_PREFIX_REGEX: "^refs\/tags\/(0|[1-9]\d*)\.(0|[1-9]\d*)?$"
+          TAG_PREFIX_REGEX: '^refs\/tags\/(0|[1-9]\d*)\.(0|[1-9]\d*)?$'
         with:
           args: |
               rocky-logos-${{ steps.tag.outputs.result }}.tar.xz
